[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.optimized]
inherits = "release"
opt-level = 3
debug = true
strip = false
lto = false

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[workspace]
resolver = "2"

members = [
  "svo",
  "erionite",
  "utils",
  "rapier_overlay",
  "doprec",
  "nbody",
  "bins/nsim",
]
