[package]
name = "erionite"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy = "0.13.1"
bevy_rapier3d = "0.25.0"
derivative = "2.2.0"
either = "1.10.0"
fern = { version = "0.6.2", features = ["colored"] }
itertools = "0.12.1"
log = "0.4.21"
noise = "0.9.0"
ordered-float = "4.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
svo = { version = "*", path = "../svo" }
utils = { version = "*", path = "../utils" }
