[package]
name = "erionite"
version = "0.1.2"
edition = "2021"

[dependencies]
bevy = "0.13.2"
derivative = "2.2.0"
doprec = { version = "0.0.0", path = "../doprec" }
either = "1.10.0"
fern = { version = "0.6.2", features = ["colored"] }
itertools = "0.12.1"
log = "0.4.21"
nbody = { version = "0.0.0", path = "../nbody", features = ["rapier"] }
noise = "0.9.0"
ordered-float = "4.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rapier_overlay = { version = "0.0.0", path = "../rapier_overlay" }
rayon = "1.10.0"
svo = { version = "*", path = "../svo" }
utils = { version = "0.0.0", path = "../utils", features = ["logging"] }
