[package]
name = "nbody"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false }
doprec = { version = "0.0.0", path = "../doprec" }
getset = "0.1.2"
rapier_overlay = { version = "0.0.0", path = "../rapier_overlay" }
utils = { version = "0.0.0", path = "../utils" }
