[package]
name = "nbody"
version = "0.0.0"
edition = "2021"

[dependencies]
arbitrary-int = "1.2.7"
bevy = { version = "0.13.2", default-features = false }
bumpalo = "3.16.0"
bumpalo-herd = "0.1.2"
derivative = "2.2.0"
doprec = { version = "0.0.0", path = "../doprec" }
either = "1.11.0"
getset = "0.1.2"
ouroboros = "0.18.3"
rapier_overlay = { version = "0.0.0", path = "../rapier_overlay", optional = true }
svo = { version = "0.0.0", path = "../svo" }
thread_local = "1.1.8"
utils = { version = "0.0.0", path = "../utils" }

[features]
rapier = ["dep:rapier_overlay"]
