[package]
name = "erionite_v1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
arbitrary-int = "1.2.6"
bincode = "1.3.3"
cached = "0.47.0"
either = "1.9.0"
itertools = "0.12.0"
noise = "0.8.2"
num-traits = "0.2.17"
ordered-float = "4.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.8.0"
serde = { version = "1.0.195", features = ["derive", "rc"] }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["experimental-threads", "double-precision", "custom-godot", "serde"]
