[package]
name = "rapier_overlay"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = ["bevy_render"] }
doprec = { path = "../doprec" }
getset = "0.1.2"
log = "0.4.21"
rapier3d-f64 = { version = "0.19.0", features = ["serde", "simd-stable"] }
utils = { version = "0.0.0", path = "../utils" }

[dev-dependencies]
bevy = "0.13.2"
fern = { version = "0.6.2", features = ["colored"] }
utils = { path = "../utils", features = ["logging"] }
