[package]
name = "svo"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary-int = "1.2.6"
bevy_math = "0.13.1"
bevy_render = "0.13.1"
bincode = "1.3.3"
cached = "0.47.0"
either = "1.9.0"
itertools = "0.12.0"
noise = "0.8.2"
num-traits = "0.2.17"
ordered-float = "4.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.8.0"
serde = { version = "1.0.195", features = ["derive", "rc"] }
utils = { version = "0.1.0", path = "../utils" }
