[package]
name = "utils"
version = "0.0.0"
edition = "2021"

[dependencies]
arbitrary-int = "1.2.7"
bevy_math = "0.13.2"
bevy_render = "0.13.2"
bimap = "0.6.3"
num-traits = "0.2.18"
replace_with = "0.1.7"
log = { version = "0.4.21", optional = true }
fern = { version = "0.6.2", features = ["colored"], optional = true }
smallvec = { version = "1.13.2", features = ["const_generics", "const_new", "serde", "specialization", "union"] }

[features]
logging = ["log", "fern"]
